Adding show/unshow password feature and logo